# ProgramGrad

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_demo.yml
.github/workflows/: ci.yml  publish.yml
docs/: evaluation.md  limitations.md  semantics.md
examples/: learnable_threshold.py  tiny_tree_search.py
programgrad/: __init__.py  autograd.py  control_flow.py  evaluation.py  fidelity.py  gradcheck.py  ir.py  ops.py  relaxations.py  tensor.py  trace.py  visualize.py
tests/: test_control_flow.py  test_evaluation.py  test_examples.py  test_gradcheck.py  test_tensor.py  test_trace.py
